--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -3,13 +3,13 @@
     .side-header
       .side-header__top
         .side-header__top__name
-          ユーザーネーム
+          = current_user.name
         %ul.side-header__top__icon
           %li.side-header__top__edit
             = link_to "#" do
               = icon('fas', 'edit')
           %li.side-header__top__cog
-            = link_to "#" do
+            = link_to edit_user_path(current_user) do
               = icon('fas', 'cog')
     .groups
       .group
@@ -21,4 +21,4 @@
         .group__name
           ナターシャ
         .group__message
-          バートンン
+          バートン
