--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -42,23 +42,27 @@ $siro: #ffffff;
         }
       }
     }
-      .groups {
-        height: calc(100vh - 100px);
-        background-color: #2f3e51;
-        padding: 20px 20px 0 20px;
-        .group {
-          margin-bottom: 40px;
+    .groups {
+      height: calc(100vh - 100px);
+      background-color: #2f3e51;
+      padding: 20px 20px 0 20px;
+      .group {
+        margin-bottom: 40px;
+        a {
+          text-decoration: none;
+        }
+        &__name {
+          font-size: 15px;
+          margin-bottom: 5px;
           color: $siro;
-          &__name {
-            font-size: 15px;
-            margin-bottom: 5px;
-          }
-          &__message {
-            font-size: 11px;
-          }
+        }
+        &__message {
+          font-size: 11px;
+          color: $siro;
         }
       }
-    }   
+    }
+  }   
   .main-chat {
     width: calc(100vw - 300px);
     .main {
@@ -81,6 +85,7 @@ $siro: #ffffff;
             li {
                 color: #999999;
                 font-size: 12px;
+                margin-right: 5px;
               }
             }
         }
@@ -96,11 +101,12 @@ $siro: #ffffff;
             border: 2px solid #38aef0;
             color: #38aef0;
             text-decoration: none;
-            font-size: 16px;
+            font-size: 6px;
             text-align: center;
           }
         }
       }
+    }
       .main-messages {
         height: calc(100vh - 100px - 90px);
         background-color: #fafafa;
@@ -136,34 +142,41 @@ $siro: #ffffff;
         height: 90px;
         background-color: #d2d2d2;
         padding: 20px 40px;
-        form {
+        .text-area {
           width: 100%;
           height: 50px;
           display: flex;
-          .text-area {
+          .new_message {
             display: flex;
             width: 100%;
-            position: relative;
-            input.form {
+            .form {
+              display: flex;
               width: 100%;
-              padding-left: 10px;
-            }
-            label.input-box__image {
-              position: absolute;
-              right: 10px;
-              line-height: 50px;
-              input.input-box__image-text {
-              display: none;
+              position: relative;
+              .new_mwssage {
+                width: 100%;
+                padding-left: 10px;
+              }
+              .input-box {
+                height: 100%;
+                position: absolute;
+                right: 10px;
+                .input-box__image {
+                  line-height: 50px;
+                  .input-box__image-text {
+                    display: none;
+                  }     
+                }   
               }
             }
-          }
-          input.submit {
-            margin-left: 15px;
-            background-color: #38aef0;
-            padding: 0 20px;
+            .submit {
+              margin-left: 15px;
+              background-color: #38aef0;
+              padding: 0 20px;
+            }
           }
         }
       }
     }
   }
-}
+
