--- a/app/views/shared/_main_chat.html.haml
+++ b/app/views/shared/_main_chat.html.haml
@@ -8,7 +8,8 @@
           %li.main-header__member--list
             member
           %li.main-header__member--name
-            = current_user.name
+            - @group.users.each do |user|
+              = user.name
       .main-header__right--box
         =link_to "編集", edit_group_path(@group)
     .main-messages
