--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -176,6 +176,7 @@ $siro: #ffffff;
               margin-left: 15px;
               background-color: #38aef0;
               padding: 0 20px;
+              color: $siro;
             }
           }
         }
